[package]
name = "rsomics-nj-tree"
version = "0.1.0"
description = "Neighbor-joining tree construction from a distance matrix — outputs Newick"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "rsomics-nj-tree"
path = "src/main.rs"

[lib]
name = "rsomics_nj_tree"
path = "src/lib.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.6" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true

[lints]
workspace = true
